---------------------------------------------------------------------------------------------------
Version: 0.69.30
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.29
Date: 2025-05-24
  Changes:
    - Fixed the addition of the Chinese locale file.
---------------------------------------------------------------------------------------------------
Version: 0.69.28
Date: 2025-05-24
  Changes:
    - Chinese localization added. Full credit goes to rlcyyg1108. Thank you so much!
---------------------------------------------------------------------------------------------------
Version: 0.69.27
Date: 2025-05-24
  Changes:
    - Fixed crashes from previous patch.
---------------------------------------------------------------------------------------------------
Version: 0.69.26
Date: 2025-05-24
  Changes:
    - Fixed a MAJOR bug that stopped trashsteroids from spawning. I also added a failsafe to hopefully stop it from happening again, and fix anyone's save files.
    - Added some public debugging functions for trashsteroids.
---------------------------------------------------------------------------------------------------
Version: 0.69.25
Date: 2025-05-24
  Changes:
    - Alien Biomes compatibility
    - Fixed promethium sci techs.... again again!
    - Added rubia sci to corrundum's infinite research speed.
    - Added emergency failsafe to un-fuck save files messed up by alien biomes before. Use this console command: /c __rubia__ rubia.emergency_failsafes.clear_rubia_entities_from_nauvis()
---------------------------------------------------------------------------------------------------
Version: 0.69.24
Date: 2025-05-23
  Changes:
    - First biorecycling recipe nerfed to give -25% copper.
    - Updated trashsteroid factoriopedia entry.